[package]
name = "api"
version = "0.1.0"
authors = ["Will Toher <will.toher.0@gmail.com>", "Bharat Middha <5100938+bmiddha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3.3"
envy = "0.4"
serde = "1.0"
lgtm = { path = "../lgtm" }

[dev-dependencies]
actix-rt = "2"
