[package]
name = "lgtm"
version = "0.1.0"
authors = ["Will Toher <will.toher.0@gmail.com>", "Bharat Middha <5100938+bmiddha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.73"
